Sorted out the .env file

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 
 # Enable seed data for development
 #VITE_USE_SEED_DATA=false
+
+VITE_REVIEWS_BASE_URL=https://reviews-test-wa07-func.azurewebsites.net
+VITE_REVIEWS_SERVICE=http
