--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@
 
 # Enable seed data for development
 #VITE_USE_SEED_DATA=false
-
-VITE_REVIEWS_BASE_URL=https://reviews-test-wa07-func.azurewebsites.net
+# Use the live Azure Function App for the API
 VITE_REVIEWS_SERVICE=http
+VITE_REVIEWS_BASE_URL=https://reviews-test-wa07-func.azurewebsites.net/api
+
